# STT-Spotify-DJ

./: .gitignore  README.md  pyproject.toml
stt_dj/utils/: __init__.py
whisper_music/: __init__.py  main.py
whisper_music/utils/: dj.py  stt.py
